--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,29 +1,33 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Booklist</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
+<title>Booklist</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
 	th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Books</h1>
-    <table class="table table-hover">
-    <tr>
-				<th>Author</th>
-				<th>Title</th>
-				<th>ISBN</th>
-				<th>Year</th>
-			</tr>
-    
-		<tr th:each="books : ${books}">
-				<td th:text="${books.author}"></td>
-				<td th:text="${books.title}"></td>
-				<td th:text="${books.isbn}"></td>
-				<td th:text="${books.year}"></td>
+	<table class="table table-hover">
+		<tr>
+			<th>Author</th>
+			<th>Title</th>
+			<th>ISBN</th>
+			<th>Year</th>
+		</tr>
 
-		</tr>  
-   
-     </table>	
+		<tr th:each="books : ${books}">
+			<td th:text="${books.author}"></td>
+			<td th:text="${books.title}"></td>
+			<td th:text="${books.isbn}"></td>
+			<td th:text="${books.year}"></td>
+			<td> <a th:href="@{/delete/{id}(id=${books.id})}">Delete</a> </td>
+			
+
+
+		</tr>
+
+	</table>
+	<a href="/add" class="btn btn-primary">Add Student</a>
 </body>
 </html>
