--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -3,12 +3,12 @@
 <head>
 <title>Booklist</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
-	th:href="@{css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="bootstrap.min.css"
+	th:href="@{bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Books</h1>
-	<table class="table table-hover">
+	<table class="table table-striped">
 		<tr>
 			<th>Author</th>
 			<th>Title</th>
@@ -21,13 +21,15 @@
 			<td th:text="${books.title}"></td>
 			<td th:text="${books.isbn}"></td>
 			<td th:text="${books.year}"></td>
-			<td> <a th:href="@{/delete/{id}(id=${books.id})}">Delete</a> </td>
+			<td th:text="${books.price}"></td>
+			<td> <a th:href="@{/delete/{id}(id=${books.id})}" class="btn btn-danger">Delete</a> </td>
+			<td> <a th:href="@{/edit/{id}(id=${books.id})}" class="btn btn-primary">Edit</a> </td>
 			
 
 
 		</tr>
 
 	</table>
-	<a href="/add" class="btn btn-primary">Add Student</a>
+	<a href="/add" class="btn btn-success" >Add Book</a>
 </body>
 </html>
