Added Category and some css

--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -12,8 +12,10 @@
 		<tr>
 			<th>Author</th>
 			<th>Title</th>
+			<th>Title</th>
 			<th>ISBN</th>
 			<th>Year</th>
+
 		</tr>
 
 		<tr th:each="books : ${books}">
