--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -3,26 +3,32 @@
 <head>
 <title>Booklist</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
-	th:href="@{css/bootstrap.min.css}" />
 </head>
 <title>Add Book</title>
-
+<body>
 <h1>Add Book</h1>
 <div>
 	<form th:object="${book}" th:action="@{save}" action="#" method="post">
-		<label for="title">Title</label> <input type="text" id="title"
-			th:field="*{title}"> <label for="author">Author</label> <input
-			type="text" id="author" th:field="*{author}"> <label
-			for="year">Year</label> <input type="text" id="year"
-			th:field="*{year}"> <label for="isbn">ISBN</label> <input
-			type="text" id="isbn" th:field="*{isbn}"> <label for="price">Price</label>
-		<input type="text" id="price" th:field="*{price}"> <input
-			type="submit" value="Save">
+	
+		     <label for="author">Author</label> <input type="text" id="author" th:field="*{author}">
+	
+		     <label for="title">Title</label> <input type="text" id="title" th:field="*{title}">
+		     
+		     <label for="isbn">ISBN</label> <input type="text" id="isbn" th:field="*{isbn}"> 
+			
+			 <label for="year">Year</label> <input type="text" id="year" th:field="*{year}">
+			 
+			 <label for="price">Price</label> <input type="text" id="price" th:field="*{price}"> 
+			 
+			 <label for="catlist">Category</label>
+             <select id="catlist" th:field="*{category}" class="form-control">
+                <option th:each="category: ${categories}" th:value="${category.categoryId}" th:text="${category.name}"></option>
+            </select>   
+			 
+			 <input type="submit" value="Save">
 	</form>
 </div>
-</head>
-<body>
+
 
 </body>
 </html>
